fb link correct
- fb link correct
- footer name

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <li> <a href="#register" data-scroll>報名</a> </li>
                     <li> <a href="#supporters" data-scroll>贊助夥伴</a> </li>
                     <li> <a href="mailto:cicadatatw@gmail.com"><i class="fa fa-envelope"></i></a> </li>
-                    <li> <a href="https://www.facebook.com/cicadata/"><i class="fa fa-facebook" targert="_blank"></i></a> </li>
+                    <li> <a href="https://www.facebook.com/cicadatatw/"><i class="fa fa-facebook" targert="_blank"></i></a> </li>
                     </ul>
                 <!-- End of Navigation items -->
             </div>
@@ -514,7 +514,7 @@
             <!-- Registration form -->
                 <div class="col-sm-6 .col-sm-offset-6">
 
-                    <p>報名時間：9/23-10/5</p>
+                    <p>報名時間：9/25-10/5</p>
                     <!-- Register button -->
                     <form action="http://www.accupass.com/go/kobedata">
                     <button type="submit" target="_blank" class="btn wow fadeInUp btn-lg">現在就報名！<i class="fa fa-paper-plane-o"></i></button>
@@ -632,9 +632,9 @@
             <div class="col-sm-6">
 
                 <!-- Social icons -->
-                <h3>知了新聞</h3>
+                <h3>知了新聞 Cicadata</h3>
                 <a href="mailto:cicadatatw@gmail.com" class="social-btn mail"><i class="fa fa-envelope"></i></a>
-                <a href="https://www.facebook.com/cicadata/" class="social-btn facebook" target="_blank"><i class="fa fa-facebook"></i></a>
+                <a href="https://www.facebook.com/cicadatatw/" class="social-btn facebook" target="_blank"><i class="fa fa-facebook"></i></a>
             
                 
                 <!-- Arrow up buttom (scroll to tje top) -->
