minor typo correct

--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                         <img src="img/d3_logo.png" alt="d3.js" class="img-responsive">
                     </div>
                     <div class="col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1 wow fadeInUp" data-wow-delay="0.2s">
-                        <h2>d3.js 資料視覺化桌</h2>
+                        <h2>D3.js 資料視覺化桌</h2>
                         <h4>使用圖表與互動呈現內容</h4>
                         <p>D3.js 是在網頁上視覺化資料的利器，能製作出精美的互動圖表，廣泛為國際各大媒體及資料分析產業使用。D3.js 的創造者 Mike Bostock 曾任職紐約時報，使用 D3.js 為紐時製作了許多經典的資料新聞作品。</p>
                     </div>
