--- a/index.html
+++ b/index.html
@@ -163,6 +163,9 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-6 col-sm-offset-0 col-xs-8 col-xs-offset-2 wow fadeInUp">
+                               <div class="speaker-social-links text-center">
+                                    <a href="https://www.facebook.com/girlsintechtaiwan/" target="_blank"><i class="fa fa-facebook wow bounceIn"></i></a>
+                                </div>
                                <img src="img/git-tw.png" alt="Girls in Tech Taiwan" class="img-responsive">
                         </div>
                         <div class="col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1 wow fadeInUp" data-wow-delay="0.2s">
