--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
                         selected section when element is clicked --> 
                     <li> <a href="#home" data-scroll>HOME</a> </li>
                     <li> <a href="#schedule" data-scroll>活動流程</a> </li>
-                    <li> <a href="#speakers" data-scroll>活動分桌</a> </li>
+                    <li> <a href="#speakers" data-scroll>講者</a> </li>
+                    <li> <a href="#tables" data-scroll>活動分桌</a> </li>
                     <li> <a href="#register" data-scroll>報名</a> </li>
                     <li> <a href="#supporters" data-scroll>贊助夥伴</a> </li>
                     <li> <a href="mailto:cicadatatw@gmail.com"><i class="fa fa-envelope"></i></a> </li>
@@ -561,7 +562,7 @@
                 </div>
                     <div class="col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1 wow fadeInUp" data-wow-delay="0.6s">
                         <h2><a href="http://starrocket.io/about/" target="_blank">
-                        三創育成- 新星火箭Star Rocket</h2></a>
+                        三創育成-新星火箭Star Rocket</h2></a>
                         <p>三創育成（Star Rocket ） 是台灣第一個結合3C商場與創業基地的創新基地。以人為核心，三創育成致力成為一個具有創意、資金、國際化的加速器平台。</p>
                     </div>
             </div>
