--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
             <!-- Map details -->
             <div class="info text-center wow bounceIn">
                 <h3><a href="http://starrocket.io/space/" target="_blank">
-                三創數位育成中心（Star Rocket）<a/></h3>
+                三創生活園區<a/></h3>
                 <p>100台北市中正區<br />市民大道三段2號11樓</p>
             </div>
             <div id="map" class="map"></div>
@@ -562,7 +562,7 @@
                 </div>
                     <div class="col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1 wow fadeInUp" data-wow-delay="0.6s">
                         <h2><a href="http://starrocket.io/about/" target="_blank">
-                        三創育成-新星火箭Star Rocket</h2></a>
+                        三創育成基金會</h2></a>
                         <p>三創育成（Star Rocket ） 是台灣第一個結合3C商場與創業基地的創新基地。以人為核心，三創育成致力成為一個具有創意、資金、國際化的加速器平台。</p>
                     </div>
             </div>
