r ladies description update 2

--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
                         <!-- Speaker position -->
                        
                         <!-- Speaker description -->
-                        <p>R Ladies Taipei 是女生專屬的 R 社群，定期於每個月的第四個星期一聚會，分享 R 的知識與學習經驗。</p>
+                        <p>R Ladies Taipei 是女生專屬的 R 社群，定期於每個月的最後一個星期一聚會，分享 R 的知識與學習經驗。</p>
                     </div>
                 </div>
 
