--- a/index.html
+++ b/index.html
@@ -46,11 +46,6 @@
                     <!-- data scroll attribute provides that page scrolls down to 
                         selected section when element is clicked --> 
                     <li> <a href="#home" data-scroll>HOME</a> </li>
-                    <li> <a href="#schedule" data-scroll>活動流程</a> </li>
-                    <li> <a href="#speakers" data-scroll>講者</a> </li>
-                    <li> <a href="#tables" data-scroll>活動分桌</a> </li>
-                    <li> <a href="#register" data-scroll>報名</a> </li>
-                    <li> <a href="#supporters" data-scroll>贊助夥伴</a> </li>
                     <li> <a href="mailto:dailycold@gmail.com"><i class="fa fa-envelope"></i></a> </li>
                     <li> <a href="https://www.facebook.com/dailycold/"><i class="fa fa-facebook" targert="_blank"></i></a> </li>
                     </ul>
@@ -121,9 +116,9 @@
             <div class="col-sm-6">
 
                 <!-- Social icons -->
-                <h3>知了新聞 Cicadata</h3>
-                <a href="mailto:cicadatatw@gmail.com" class="social-btn mail"><i class="fa fa-envelope"></i></a>
-                <a href="https://www.facebook.com/cicadatatw/" class="social-btn facebook" target="_blank"><i class="fa fa-facebook"></i></a>
+                <h3>每日一冷 DAILYCOLD.TW</h3>
+                <a href="mailto:dailycold@gmail.com" class="social-btn mail"><i class="fa fa-envelope"></i></a>
+                <a href="https://www.facebook.com/dailycold/" class="social-btn facebook" target="_blank"><i class="fa fa-facebook"></i></a>
             
                 
                 <!-- Arrow up buttom (scroll to tje top) -->
@@ -133,7 +128,7 @@
                 <br>
 
                 <!-- Copyright -->
-                <h5>© 知了新聞 Cicadata 2016 版權所有</h5>
+                <h5>© 每日一冷 DAILYCOLD.TW 2016 版權所有</h5>
             </div>
         </div>
     </footer>
