--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="#">
-                    <img src="img/ms-icon-150x150.png" alt="Cicadatatw logo" class="img-responsive">
+                    <img src="img/logo.png" alt="dailycold logo" class="img-responsive">
                 </a>
             </div>
 
