--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
                 <!-- Event name and basic details-->
                 <h1 class="event-name wow fadeInDown">歡迎璨宇歸國</h1>
-                <h4 class="wow fadeInDown event-subtitle">Welcome Mr. Holiday</h4>
+                <h4 class="wow fadeInDown event-subtitle">Welcome Mr Holiday</h4>
                 <h3 class="event-details wow fadeInUp">2016/10/08 （六）</h3> 
 
                 <!-- Countdown -->
