--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
     <![endif]-->
 </head>
 <body>
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/zh_TW/sdk.js#xfbml=1&version=v2.7&appId=607219096081910";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
 
     <!-- Top navigation -->
     <nav class="navbar navbar-inverse navbar-static-top">
@@ -102,14 +110,14 @@
     </header>
     <!-- End of Header -->
 
-
+    
 
 
     <!-- Footer -->
     <footer>
         <div class="container">
             <div class="col-sm-6">
-                
+                <div class="fb-comments" data-href="http://holiday.dailycold.tw" data-width="100%" data-numposts="10"></div>
                 <br>
                 <br>
             </div>
