--- a/index.html
+++ b/index.html
@@ -110,14 +110,14 @@
     </header>
     <!-- End of Header -->
 
-    
+
 
 
     <!-- Footer -->
     <footer>
         <div class="container">
             <div class="col-sm-6">
-                <div class="fb-comments" data-href="http://holiday.dailycold.tw" data-width="100%" data-numposts="10"></div>
+                <div class="fb-comments" data-href="http://holiday.dailycold.tw" data-width="100%" data-numposts="10" data-colorscheme="dark"></div>
                 <br>
                 <br>
             </div>
