--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>歡迎璨宇歸國</title>
-    <meta name="description" content="歡迎每日一冷 Mr. Holiday 歸國">
+    <meta name="description" content="歡迎每日一冷 Mr Holiday 歸國">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="img/favicon.ico">
 
